cicd-backend-user/cicd/v2/deployment-cicd-backend-news.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-backend-news
spec:
  selector:
    matchLabels:
      app: cicd-backend-news
  replicas: 1
  template:
    metadata:
      labels:
       app: cicd-backend-news 
    spec:
      imagePullSecrets:
      - name: private-registry   
      containers:
      - name: cicd-backend-news
        imagePullPolicy: Always
        image: localhost:8082/cicd-backend-news:20221216222725
        ports:
        - containerPort: 8092
