cicd-backend-user/cicd/v2/deployment-cicd-backend-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-backend-user
spec:
  selector:
    matchLabels:
      app: cicd-backend-user
  replicas: 1
  template:
    metadata:
      labels:
       app: cicd-backend-user 
    spec:
      imagePullSecrets:
      - name: private-registry   
      containers:
      - name: cicd-backend-user
        imagePullPolicy: Always
        image: localhost:8082/cicd-backend-user:20221216222726
        ports:
        - containerPort: 8091
