cicd-backend-user/cicd/v2/service-cicd-backend-news.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cicd-backend-news
spec:
  selector:
    app: cicd-backend-news  
  ports:
  - protocol: TCP
    targetPort: 8092
    port: 8092  
  type: NodePort
