cicd-backend-user/cicd/v2/service-cicd-backend-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cicd-backend-user
spec:
  selector:
    app: cicd-backend-user  
  ports:
  - protocol: TCP
    targetPort: 8091
    port: 8091  
  type: NodePort
